added e2e enchancements